src/objects/SCP_Criteria_DCM__c.object
<CustomObject>
    <fields>
        <fullName>Approach__c</fullName>
        <label>Approach</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Competitor_Standing__c</fullName>
        <formula>IF(ISPICKVAL( Customer_Consideration__c , &quot;HIGH&quot;)
, IF (ISPICKVAL(  Competitors_Competitive_Standing__c  ,&quot;HIGH&quot;), &quot;VW&quot;, &quot;VK&quot;)
, IF (ISPICKVAL(  Competitors_Competitive_Standing__c  ,&quot;HIGH&quot;), &quot;VS&quot;, &quot;NV&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Competitor&apos;s Standing</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Competitors_Competitive_Standing__c</fullName>
        <label>Competitors Competitive Standing</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Criteria__c</fullName>
        <label>Criteria</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Consideration__c</fullName>
        <label>Customer Consideration</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Our_Competitive_Standing__c</fullName>
        <label>Our Competitive Standing</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Our_Standing__c</fullName>
        <formula>IF(ISPICKVAL( Customer_Consideration__c , &quot;HIGH&quot;)
, IF (ISPICKVAL( Our_Competitive_Standing__c ,&quot;HIGH&quot;), &quot;VW&quot;, &quot;VK&quot;)
, IF (ISPICKVAL( Our_Competitive_Standing__c ,&quot;HIGH&quot;), &quot;VS&quot;, &quot;NV&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Our Standing</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SCP_Oportunidad__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SCP Oportunidad</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>SCP Criteria DCM</relationshipLabel>
        <relationshipName>SCP_Criteria_DCM</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>SCP Criteria DCM</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Nombre de SCP Criteria DCM</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SCP Criteria DCM</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>